tests/rosetta/transpiler/Kotlin/active-object.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/active-object.kt:8:18: error: unresolved reference: float
fun sinApprox(x: float): float {
                 ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/active-object.kt:8:26: error: unresolved reference: float
fun sinApprox(x: float): float {
                         ^
